--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,16 +13,25 @@
     <string name="login_button_text">Next</string>
     <string name="login_password">Password</string>
     <string name="login_confirm_password">Confirm password</string>
-
-    <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
+
+    <string name="fill_profile">Fill your profile data</string>
+    <string name="help_text">Help us to know you</string>
+    <string name="import_text">Import from Social Media</string>
+    <string name="prompt_email">EMAIL</string>
+    <string name="f_import">Import from Facebook</string>
+    <string name="vk_import">Import from VKontakte</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="first_name">FIRST NAME</string>
+    <string name="last_name">LAST NAME</string>
+    <string name="or_text">or</string>
+    <string name="fill_text">Fill it by yourself</string>
+    <string name="register_text">Register</string>
+
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
