--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,8 +13,8 @@
     <string name="login_button_text">Next</string>
     <string name="login_password">Password</string>
     <string name="login_confirm_password">Confirm password</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_invalid_password">The passwords are too short</string>
+    <string name="error_incorrect_password">The passwords are incorrect</string>
 
     <string name="fill_profile">Fill your profile data</string>
     <string name="help_text">Help us to know you</string>
